# aigateway.lib.unb.ca

./: .gitignore  Cargo.toml  README.md
assets/: aigateway.drawio
data/: config.example.json
scripts/: test.sh
src/: auth.rs  config.rs  main.rs  proxy.rs  server.rs
src/adapters/: deckard_llm.rs  mod.rs  tyrell.rs
src/client/: metadata.rs
src/commands/: commands.rs  keys.rs  mod.rs
src/logging/: detailed.rs  mod.rs  newrelic.rs  proxy.rs
