
[package]
name = "aigateway_lib_unb_ca"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
dialoguer = "0.10"
env_logger = "0.9"
hyper = { version = "0.14", features = ["server", "client", "tcp", "http2"] }
log = "0.4"
password-hash = "0.3"
rand = "0.8"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
